--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
 </head>
 <body>
-  <section class="menu cid-rRZWZWyeDk" once="menu" id="menu1-0">
+  <section class="menu cid-rVEyPnVwTV" once="menu" id="menu1-3i">
 
     
 
@@ -55,7 +55,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="page1.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span>About</a>
+                    <a class="nav-link link text-secondary display-4" href="page7.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span>About</a>
                 </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="page2.html"><span class="mobi-mbri mobi-mbri-idea mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span>Investment</a></li><li class="nav-item">
                     <a class="nav-link link text-secondary display-4" href="page3.html"><span class="mobi-mbri mobi-mbri-features mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span>Service</a>
                 </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span>Team</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="page5.html"><span class="mobi-mbri mobi-mbri-extension mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span>Join</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="page6.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span>中文 &nbsp; &nbsp;</a></li></ul>
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="header12 cid-rVEiHmHD26 mbr-fullscreen mbr-parallax-background" id="header12-3f">
+<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="header12 cid-rVEiHmHD26 mbr-fullscreen mbr-parallax-background" id="header12-3f">
 
     
 
@@ -396,14 +396,14 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
